# Xell-language

./: .gitignore  CMakeLists.txt  GAP_VERIFICATION.md  LANGUAGE_FEATURES.md  LICENSE  README.md  SESSION_SUMMARY.md  VERIFIED_GAP_VERIFICATION.md  VERIFIED_LANGUAGE_FEATURES.md  install.sh  test_stream.xel  testing.nxel  untitled.xel
Extensions/: gen_grammar.py  gen_xell_grammar.py  json_and_kernel.hpp  notebook.sh  xell_kernel.hpp  xell_notebook.sh
Extensions/build_scriptit/: CMakeCache.txt  Makefile  cmake_install.cmake  scriptit
Extensions/examples/: demo.xel  hello.nxel  hello.sit  hello.xel
Extensions/examples/lib/: collections.xel  math_utils.xel  string_utils.xel
Extensions/notebook/: NSIT_FORMAT.md  NXEL_FORMAT.md  Untitled.nsit  getting_started.nsit  notebook.html  notebook_server.py  test_notebook.py  xell_notebook_server.py
Extensions/scriptit-vscode/: .vscodeignore  LICENSE  README.md  extension_internals.md  how_to_customize.md  how_to_use.md  install.py  language-configuration.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
Extensions/scriptit-vscode/color_customizer/: customize.html  customizer_server.py  token_data.json
Extensions/xell-vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  xell-lang-0.1.0.vsix
Extensions/xell-vscode/snippets/: xell.json
UserGuide/: README.md  slice_operations.md
UserGuide/audit/: missing_or_underdocumented.md
UserGuide/builtins/: builtins.md
UserGuide/control_flow/: control_flow.md
UserGuide/create commands/: supported_commands.md
UserGuide/decorators/: decorators.md
UserGuide/dialects/: dialects.md
UserGuide/error_handling/: error_handling.md
UserGuide/functions/: functions.md
UserGuide/loops/: loops.md
UserGuide/modules/: modules.md
UserGuide/oop/: oop.md
UserGuide/variables/: variables.md
build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bring_test  builtin_test  cmake_install.cmake  compile_commands.json  datetime_regex_test  error_test  forloop_test  fs_test  interpreter_test  json_shell_test  module_test  network_archive_test  os_test  parser_test  process_sysmon_test  shell_test  textproc_test  xell  xobject_test
demo/: File_organizer  File_organizer.xel  File_organizer_native.xel  file_organizer.xel  slice_demo.xel
readme/: ast_guide.md  autocomplete_plan.md  bring system plan.md  bring_module_plan.md  changes i want  convert_dialect_plan.md  convert_module_plan.md  debug_api.md  debug_ide_plan.md  debug_manual_test_guide.md  debug_usage_guide.md  file_organizer_native.xel  ide_debug_guide.md  lang_plan.md  language_audit.md  let_be_plan.md  lexer_guide.md  next_target_plan.md  oop_plan.md  parser_guide.md  snake-game.html  xell_grammar.md  xell_learning_guide(this is for devs for editing it).md  xell_roadmap(next targets for me).md  xell_terminal_ide_plan.md
src/: main.cpp
src/analyzer/: static_analyzer.hpp  symbol_collector.hpp
src/builtins/: builtin_registry.hpp  builtins_archive.hpp  builtins_bytes.hpp  builtins_casting.hpp  builtins_collection.hpp  builtins_datetime.hpp  builtins_fs.hpp  builtins_generator.hpp  builtins_hash.hpp  builtins_io.hpp  builtins_json.hpp  builtins_list.hpp  builtins_map.hpp  builtins_math.hpp  builtins_network.hpp  builtins_os.hpp  builtins_process.hpp  builtins_regex.hpp  builtins_shell.hpp  builtins_string.hpp  builtins_sysmon.hpp  builtins_textproc.hpp  builtins_type.hpp  builtins_util.hpp  module_registry.hpp  register_all.hpp
src/common/: access_level.hpp  dialect_convert.hpp
src/hash/: hash_algorithm.hpp
src/interpreter/: debug_ipc.hpp  environment.hpp  interpreter.cpp  interpreter.hpp  shell_state.hpp  trace_collector.hpp  xobject.cpp  xobject.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/module/: module_metadata.hpp  module_resolver.cpp  module_resolver.hpp  xmodule.hpp
src/os/: env.cpp  fs.cpp  os.hpp  path_lookup.hpp  process.cpp
src/parser/: ast.hpp  parser.cpp  parser.hpp
src/repl/: completer.hpp  history.hpp  line_editor.hpp  repl.hpp  terminal.hpp
src/xobject/: gc.cpp  gc.hpp  ordered_hash_table.hpp
stdlib/: dialect_template.xesy
test/: abstract_test.cpp  access_test.cpp  bring_test.cpp  builtin_test.cpp  casting_overload_test.cpp  class_test.cpp  datetime_regex_test.cpp  debug_ipc_test.cpp  debug_test.cpp  decorator_test.cpp  error_test.cpp  expr_loop_test.cpp  forloop_test.cpp  fs_test.cpp  interface_test.cpp  interpreter_test.cpp  json_shell_test.cpp  kwargs_test.cpp  let_be_test.cpp  magic_test.cpp  mixin_test.cpp  module_test.cpp  network_archive_test.cpp  os_test.cpp  parser_test.cpp  process_sysmon_test.cpp  property_test.cpp  shell_test.cpp  static_test.cpp  struct_test.cpp  textproc_test.cpp  threading_test.cpp  xobject_test.cpp
test/fixtures/: breakpoint_test.xel  callstack_test.xel  checkpoint_test.xel  mixed_test.xel  notrack_test.xel  step_test.xel  watch_test.xel
test/scripts/: mylib.xel  playing_around.nxel  playing_around.xel  test_alias.xel  test_edge_cases.xel  test_real_world_bring.xel  test_thirdparty.xel  test_tier1.xel  test_tier2_bring.xel
xell-terminal/: CMakeLists.txt  README.md  build.sh  test_ide.cpp  test_snippets.cpp
xell-terminal/assets/fonts/: README.md
xell-terminal/src/: main.cpp
xell-terminal/src/editor/: editor_input.hpp  editor_view.hpp  editor_widget.hpp  text_buffer.hpp
xell-terminal/src/highlight/: highlighter.hpp
xell-terminal/src/pty/: pty.hpp  pty_unix.cpp  pty_win.cpp
xell-terminal/src/renderer/: renderer.cpp  renderer.hpp
xell-terminal/src/terminal/: input_handler.cpp  input_handler.hpp  screen_buffer.cpp  screen_buffer.hpp  types.hpp  vt_parser.cpp  vt_parser.hpp
xell-terminal/src/theme/: theme_loader.hpp
xell-terminal/src/ui/: autocomplete.hpp  config_manager.hpp  dashboard_panel.hpp  debug_client.hpp  diagnostics.hpp  embedded_terminal.hpp  file_tree.hpp  find_replace.hpp  git_panel.hpp  layout_manager.hpp  panel.hpp  repl_panel.hpp  snippet_engine.hpp  visual_effects.hpp
xell-terminal/tmp/: debug_bracket  debug_bracket.cpp  test_ide
(+71 files in other folders)
